fix:  split UI issue on iOS

--- a/playground/src/platform/mobile/rtc/agent/index.module.scss
+++ b/playground/src/platform/mobile/rtc/agent/index.module.scss
@@ -60,10 +60,12 @@
 }
 
 .splashScreen {
+  position: absolute;
   color: transparent;
   height: 100%;
   width: 100%;
   object-fit: contain;
   z-index: 1;
   top:0px;
+  background: black;
 }
